Update and rename mainpage2.0.html to index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
     <div id="content">
         <h1>Welcome to Our New Website</h1>
-        <a href="https://mrmedium.github.io/SparxBookwork/">
+        <a href="p1index.html">
             <button>Continue</button>
         </a>
     </div>
